# ChatServer

./: .env.example  .env.template  .gitignore  Dockerfile  README.md  check_config.py  create_text.py  firebase.json  firestore_indexes.json  firestore_rules.rules  nginx.conf  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  run.py  run_dev.py  test_chat_endpoint.py  test_firebase_connection.py  test_multi_database_agents.py  test_review_creation.py  test_server.py  test_server_startup.py  test_session_title.py  test_vertex_ai.py
app/: __init__.py  main.py
app/agents/: __init__.py  paper_scout_agent.py  review_creation_agent.py
app/api/routes/: auth.py  chat.py  commands.py  knowledge.py  models.py  sessions.py  tasks.py  workflows.py
app/api/websockets/: chat.py
app/core/: config.py  security.py
app/middleware/: auth.py  rate_limiter.py  security.py
app/models/: enhanced_schemas.py  knowledge_graph_schemas.py  schemas.py
app/services/: agent_base.py  arxiv_service.py  command_service.py  context_aware_rag_service.py  database_interfaces.py  enhanced_document_processor.py  enhanced_knowledge_graph_service.py  firebase_service.py  firestore_session_service.py  firestore_task_service.py  gemini_service.py  google_scholar_service.py  google_workspace_service.py  knowledge_service.py  langchain_service.py  llm_service.py  openai_service.py  pubmed_adapter.py  pubmed_service.py  session_service.py  task_service.py  translation_service.py  workflow_status_service.py
docs/: firebase-setup.md  gemini-integration-guide.md  paper-scout-implementation.md  sequence-diagram.md  vertex-ai-setup.md
scripts/: dev.sh  start.sh
tests/: test_api_simple.py  test_command_system.py  test_enhanced_paper_search.py  test_firebase_connection.py  test_google_api.py  test_session_title.py  test_vertex_ai.py
